Added switch for incoming requests
The incoming request is now filtered in a switch case block and then the respecting events are emitted.
Also the events are defined in the EVENTS object to mitigate spelling mistakes

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ typings/
 
 # truffle build
 build
+.idea/decentralized-energy-trading.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+package-lock.json
