--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.17.0",
     "solium": "^1.2.4",
-    "truffle": "^5.0.13"
+    "truffle": "^5.0.13",
+    "mongodb": "^3.2.3"
+  },
+  "dependencies": {
+    "mongodb": "^3.2.3"
   }
 }
