--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ build
 .idea/vcs.xml
 .idea/workspace.xml
 package-lock.json
+.idea/codeStyles/codeStyleConfig.xml
+.idea/codeStyles/codeStyleConfig.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/jsLinters/jslint.xml
