--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "mongodb": "^3.2.3",
     "prettier": "^1.17.0",
     "solium": "^1.2.4",
-    "truffle": "^5.0.13",
-    "mongodb": "^3.2.3"
+    "truffle": "^5.0.13"
   },
   "dependencies": {
+    "web3": "^1.0.0-beta.53"
   }
 }
