--- a/parity-authority/docker/docker-compose.yml
+++ b/parity-authority/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       --config /parity/config/authority.toml
       --engine-signer 0x00bd138abd70e2f00903268f3db08f2d25677c9e
       --ws-interface 0.0.0.0
-      --unsafe-expose   
+      --unsafe-expose
       --jsonrpc-cors all
       --no-persistent-txqueue
       --fast-unlock
@@ -41,6 +41,8 @@ services:
       --engine-signer 0x00aa39d30f0d20ff03a22ccfc30b7efbfca597c2
       --no-persistent-txqueue
       --fast-unlock
+    ports:
+      - 8545
     networks:
       app_net:
         ipv4_address: 172.16.0.11
@@ -59,6 +61,8 @@ services:
       --engine-signer 0x002e28950558fbede1a9675cb113f0bd20912019
       --no-persistent-txqueue
       --fast-unlock
+    ports:
+      - 8545
     networks:
       app_net:
         ipv4_address: 172.16.0.12
@@ -82,7 +86,7 @@ services:
     networks:
       app_net:
         ipv4_address: 172.16.0.200
-        
+
 volumes:
   data-volume:
 networks:
