--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^6.1.4",
     "openzeppelin-solidity": "^2.2.0",
     "openzeppelin-test-helpers": "^0.3.2",
     "prettier": "^1.17.0",
+    "request": "^2.88.0",
     "solium": "^1.2.4",
+    "sync-request": "^6.1.0",
     "truffle": "^5.0.13"
   },
   "dependencies": {}
