Add web3 and mongodb dependencies

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "solium": "^1.2.4",
     "truffle": "^5.0.13"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mongodb": "^3.2.3",
+    "web3": "^1.0.0-beta.54"
+  }
 }
