--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8",
+    "express": "^4.16.4",
     "mongodb": "^3.2.3",
     "web3": "^1.0.0-beta.54"
   }
