--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "migrate-contracts": "truffle migrate",
     "test-contracts": "run-script-os",
     "test-contracts:linux:darwin": "truffle test './test/contracts/*' --network develop",
-    "test-contracts:win32": ".\\test-contracts.bat",
+    "test-contracts:win32": ".\\test-contracts.bat --network develop",
     "run-server": "node ./household-server/index.js",
     "run-ui": "node ./household-ui/index.js",
     "run-sensor": "node ./mock-sensor/index.js",
