Add yarn script for testing helpers

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "format-contracts": "solium -d contracts/ --fix",
     "run-ganache": "ganache-cli -i 123456 -d edge wage lab clever gap defense lend broken lumber tumble cousin blush",
     "migrate-contracts-ganache": "truffle migrate --reset hard --network ganache",
+    "migrate-contracts-authority": "truffle migrate --reset hard --network authority",
     "test-parity-native": "./scripts/run_native_parity_tests.sh",
-    "test-parity-docker": "./scripts/run_docker_parity_tests.sh"
+    "test-parity-docker": "./scripts/run_docker_parity_tests.sh",
+    "test-helpers": "mocha ./test/helpers/*.js"
   },
   "devDependencies": {
     "chai": "^4.2.0",
