--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "compile-contracts": "truffle compile",
     "migrate-contracts": "truffle migrate",
     "test-contracts": "run-script-os",
-    "test-contracts:linux:darwin": "truffle test ./test/contracts/* --network develop",
+    "test-contracts:linux:darwin": "truffle test './test/contracts/*' --network develop",
     "test-contracts:win32": ".\\test-contracts.bat --network develop",
     "run-server": "node ./household-server/index.js",
     "run-ui": "node ./household-ui/index.js",
@@ -45,9 +45,10 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8",
+    "commander": "^2.20.0",
     "mongodb": "^3.2.3",
-    "web3": "^1.0.0-beta.54",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "web3": "^1.0.0-beta.54"
   }
 }
