--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "bn.js": "^4.11.8",
     "commander": "^2.20.0",
+    "express": "^4.16.4",
     "mongodb": "^3.2.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
