--- a/household-ui/package.json
+++ b/household-ui/package.json
@@ -6,7 +6,8 @@
     "grommet": "^2.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +16,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "../.eslintrc.json",
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
