--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "bn.js": "^4.11.8",
     "commander": "^2.20.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^3.2.3",
     "request": "^2.88.0",
