Change linting of ui be callable from global

--- a/household-ui/package.json
+++ b/household-ui/package.json
@@ -19,8 +19,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "../.eslintrc.json",
-      "react-app"
+      "standard-react",
+      "../.eslintrc.json"
     ]
   },
   "browserslist": {
