--- a/household-ui/package.json
+++ b/household-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "grommet": "^2.7.0",
+    "grommet-icons": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
