--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "compile-contracts": "truffle compile",
     "migrate-contracts": "truffle migrate",
     "test-contracts": "run-script-os",
-    "test-contracts:linux:darwin": "truffle test ./test/contracts/* --network develop",
-    "test-contracts:win32": ".\\test-contracts.bat --network develop",
+    "test-contracts:linux:darwin": "truffle test ./test/contracts/*",
+    "test-contracts:win32": ".\\test-contracts.bat",
     "run-server": "node ./household-server/index.js",
     "run-sensor": "node ./mock-sensor/index.js",
     "lint-all": "eslint household-server/ mock-sensor/ test/ helpers/ household-ui/src && yarn lint-contracts",
@@ -43,7 +43,7 @@
     "prettier": "^1.17.0",
     "run-script-os": "^1.0.5",
     "solium": "^1.2.4",
-    "truffle": "^5.0.13"
+    "truffle": "^5.0.20"
   },
   "dependencies": {
     "bn.js": "^4.11.8",
