--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "git@github.com:cp-ss2019/decentralized-energy-trading.git",
   "scripts": {
     "compile-contracts": "truffle compile",
+    "connect-docker-nodes": "node scripts/connect_nodes.js",
     "migrate-contracts": "truffle migrate",
     "test-contracts": "run-script-os",
     "test-contracts:linux:darwin": "truffle test ./test/contracts/*",
