--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "run-ganache": "ganache-cli --account='0xdcb15ba5d2caf586c22f0414f527201d2fb2424c92ced3efacd742a34e5b0db2,100000000000000000000' -i 1234 -l 0x1fffffffffffff",
     "migrate-contracts-ganache": "truffle migrate --reset hard --network ganache",
     "migrate-contracts-authority": "truffle migrate --reset hard --network authority",
+    "migrate-contracts-docker": "truffle migrate --reset hard --network authority_docker",
     "test-parity-native": "./scripts/run_native_parity_tests.sh",
     "test-parity-docker": "./scripts/run_docker_parity_tests.sh",
     "test-helpers": "mocha ./test/helpers/*.js",
@@ -57,6 +58,7 @@
     "mongodb": "^3.2.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "shelljs": "^0.8.3",
     "web3": "^1.0.0-beta.54"
   }
 }
