[HHPU] Linux yarn install bug
- Add --network-concurrency flag to yarn install command
- Upgrade yarn dependencies

--- a/household-processing-unit/Dockerfile
+++ b/household-processing-unit/Dockerfile
@@ -27,9 +27,9 @@ COPY household-processing-unit/parity/authority.toml ./parity/authority.toml
 COPY household-processing-unit/scripts/start.sh ./
 COPY household-processing-unit/scripts/setup_parity.sh ./
 
-RUN yarn install
+RUN yarn install --network-concurrency 1
 WORKDIR /household_procesing_unit/household-ui
-RUN yarn install
+RUN yarn install --network-concurrency 1
 
 WORKDIR /household_procesing_unit
 RUN ./setup_parity.sh
