--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8",
+    "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.3.0",
