Add linting to files in root and migrations/

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "run-server": "node ./household-server/index.js",
     "run-sensor": "node ./mock-sensor/index.js",
     "run-ned": "node ./ned-server/index.js",
-    "lint-all": "eslint household-server/ mock-sensor/ test/ helpers/ household-ui/src utility-js/ scripts/ && yarn lint-contracts",
+    "lint-all": "eslint *.js household-server/ mock-sensor/ test/ helpers/ household-ui/src utility-js/ scripts/ migrations/ && yarn lint-contracts",
     "lint-contracts": "solium -d contracts/",
-    "format-all": "eslint household-server/ mock-sensor/ test/ helpers/ household-ui/src utility-js/ scripts/ --fix && yarn format-contracts",
+    "format-all": "eslint *.js household-server/ mock-sensor/ test/ helpers/ household-ui/src utility-js/ scripts/ migrations/ --fix && yarn format-contracts",
     "format-contracts": "solium -d contracts/ --fix",
     "run-ganache": "ganache-cli --account='0xdcb15ba5d2caf586c22f0414f527201d2fb2424c92ced3efacd742a34e5b0db2,100000000000000000000' -i 1234 -l 0x1fffffffffffff",
     "migrate-contracts-ganache": "truffle migrate --reset hard --network ganache",
