Add zokrates build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,9 @@ package-lock.json
 
 # Benchmark
 utility_benchmark.csv
+
+# ZoKrates
+zokrates-code/out
+zokrates-code/out.code
+zokrates-code/proving.key
+zokrates-code/verification.key
