Add more zokrates build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ zokrates-code/out
 zokrates-code/out.code
 zokrates-code/proving.key
 zokrates-code/verification.key
+zokrates-code/witness
+zokrates-code/proof.json
+zokrates-code/verifier.sol
