--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ zokrates-code/verification.key
 zokrates-code/witness
 zokrates-code/proof.json
 zokrates-code/verifier.sol
+contracts/verifier.sol
