--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test-helpers": "mocha ./test/helpers/*.js",
     "test-utility-js": "mocha ./test/utility-js/*",
     "utility-benchmark": "./scripts/benchmarks/run_utility_benchmark.sh",
-    "update-contract-bytecodes": "yarn compile-contracts && node ./scripts/update-contract-bytecodes"
+    "update-contract-bytecodes": "yarn compile-contracts && node ./scripts/update-contract-bytecodes",
+    "setup-zokrates": "./scripts/setup_zokrates.sh"
   },
   "devDependencies": {
     "chai": "^4.2.0",
