[VS][UC] Integrate Utility to OwnedSet for HHPU
- Update docker files
- Update migrations
- Update authority.toml config file

--- a/household-processing-unit/Dockerfile
+++ b/household-processing-unit/Dockerfile
@@ -18,12 +18,12 @@ COPY household-server ./household-server
 COPY household-ui ./household-ui
 COPY migrations ./migrations
 
-COPY household-processing-unit/docker-admin/household-server-config.js ./
+COPY household-server-config.js ./
 COPY package.json ./
 COPY truffle-config.js ./
 COPY yarn.lock ./
-COPY household-processing-unit/parity/chain.json ./parity/chain.json
-COPY household-processing-unit/parity/authority.toml ./parity/authority.toml
+COPY parity-authority/parity/config/chain.json ./parity/config/chain.json
+COPY parity-authority/parity/config/authority.toml ./parity/authority.toml
 COPY household-processing-unit/scripts/start.sh ./
 COPY household-processing-unit/scripts/setup_parity.sh ./
 
