--- a/parity-authority/parity/config/authority.toml
+++ b/parity-authority/parity/config/authority.toml
@@ -1,11 +1,12 @@
 [parity]
-chain = "/parity/config/chain.json"
+chain = "parity/config/chain.json"
 
 [rpc]
 interface = "0.0.0.0"
 cors = ["all"]
 hosts = ["all"]
 apis = ["web3", "eth", "net", "parity", "traces", "rpc", "personal", "parity_accounts", "signer", "parity_set"]
+port = 8545
 
 [network]
 bootnodes = [
@@ -15,7 +16,7 @@ bootnodes = [
 ]
 
 [account]
-password = ["/parity/authority.pwd"]
+password = ["parity/authority.pwd"]
 
 [mining]
 reseal_on_txs = "none"
@@ -24,3 +25,6 @@ reseal_max_period = 5000
 tx_queue_size = 16384
 tx_queue_mem_limit = 4096
 tx_queue_per_sender = 16384
+
+[websockets]
+port = 8450
