Add verification unit tests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "update-contract-bytecodes": "yarn compile-contracts && node ./scripts/update-contract-bytecodes"
   },
   "devDependencies": {
+    "@gnosis.pm/mock-contract": "^3.0.7",
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.1.1",
