[NED] Docker for NED instance
- Restrcuture to NED Procesing Unit
- Add new star_ned bash script
- Add parity admin client
- Update other Docker images to support the new install parity script

--- a/household-processing-unit/docker-admin/Dockerfile
+++ b/household-processing-unit/docker-admin/Dockerfile
@@ -29,14 +29,14 @@ COPY parity-authority/parity/config/authority.toml ./parity/authority.toml
 COPY parity-authority/parity/authorities/authority0.json ./parity/authority.json
 COPY parity-authority/parity/authorities/authority0.pwd ./parity/authority.pwd
 COPY household-processing-unit/scripts/start_admin.sh ./
-COPY household-processing-unit/scripts/setup_parity.sh ./
+COPY scripts/install_parity.sh ./
 
 RUN yarn install --network-concurrency 1
 WORKDIR /household_procesing_unit/household-ui
 RUN yarn install --network-concurrency 1
 
 WORKDIR /household_procesing_unit
-RUN ./setup_parity.sh
+RUN ./install_parity.sh
 RUN parity account import --config ./parity/authority.toml ./parity/authority.json
 WORKDIR /household_procesing_unit
 
