--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "csv-writer": "^1.3.0",
     "express": "^4.16.4",
     "gaussian": "^1.1.0",
+    "js-sha256": "^0.9.0",
     "mongodb": "^3.2.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
