--- a/parity-authority/parity/config/authority.toml
+++ b/parity-authority/parity/config/authority.toml
@@ -1,5 +1,5 @@
 [parity]
-chain = "parity/config/chain.json"
+chain = "/parity/config/chain.json"
 
 [rpc]
 interface = "0.0.0.0"
@@ -16,7 +16,7 @@ bootnodes = [
 ]
 
 [account]
-password = ["parity/authority.pwd"]
+password = ["/parity/authority.pwd"]
 
 [mining]
 reseal_on_txs = "none"
@@ -27,4 +27,8 @@ tx_queue_mem_limit = 4096
 tx_queue_per_sender = 16384
 
 [websockets]
-port = 8450
+disable = false
+port = 8546
+apis = ["pubsub","parity_pubsub","shh", "shh_pubsub", "web3", "eth", "net", "parity", "traces", "rpc", "personal", "parity_accounts", "signer", "parity_set"]
+interface = "0.0.0.0"
+hosts = ["all"]
