[NED][AN] Bugfix parity-docker and ned-server
- Refactor ned-server and parity Docker files
- Refactor authority.toml file
- Update parity tests related scripts
- Remove nativetest.js file

--- a/parity-authority/parity/config/authority.toml
+++ b/parity-authority/parity/config/authority.toml
@@ -1,5 +1,5 @@
 [parity]
-chain = "parity/config/chain.json"
+chain = "/parity/config/chain.json"
 
 [rpc]
 interface = "0.0.0.0"
@@ -16,7 +16,7 @@ bootnodes = [
 ]
 
 [account]
-password = ["parity/authority.pwd"]
+password = ["/parity/authority.pwd"]
 
 [mining]
 reseal_on_txs = "none"
