[HPU] Fix docker deployment setup
- Expose WS ports in docker-compose
- Enable websockets in truffle-config
- Chan truffle config to WS instead of HTTP
- Remove absolute paths from starting scripts and docker images
- Update ports in connect_nodes script

--- a/household-processing-unit/docker-admin/Dockerfile
+++ b/household-processing-unit/docker-admin/Dockerfile
@@ -37,7 +37,7 @@ RUN yarn install --network-concurrency 1
 
 WORKDIR /household_procesing_unit
 RUN ./install_parity.sh
-RUN parity account import --config ./parity/authority.toml ./parity/authority.json
+RUN parity account import --config parity/authority.toml parity/authority.json
 WORKDIR /household_procesing_unit
 
 CMD ./start_admin.sh
