--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "setup-zokrates": "./scripts/setup_zokrates.sh"
   },
   "devDependencies": {
-    "@gnosis.pm/mock-contract": "^3.0.7",
+    "@gnosis.pm/mock-contract": "3.0.7",
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.1.1",
@@ -42,28 +42,28 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "ganache-cli": "^6.4.3",
+    "ganache-cli": "6.7.0",
     "mocha": "^6.1.4",
-    "openzeppelin-solidity": "^2.2.0",
-    "openzeppelin-test-helpers": "^0.3.2",
+    "openzeppelin-solidity": "2.2.0",
+    "openzeppelin-test-helpers": "0.3.2",
     "prettier": "^1.17.0",
     "run-script-os": "^1.0.5",
     "solium": "^1.2.4",
-    "truffle": "^5.0.20"
+    "truffle": "5.0.36"
   },
   "dependencies": {
-    "bn.js": "^4.11.8",
+    "bn.js": "4.11.8",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.3.0",
     "express": "^4.16.4",
     "gaussian": "^1.1.0",
-    "js-sha256": "^0.9.0",
-    "mongodb": "^3.2.3",
+    "js-sha256": "0.9.0",
+    "mongodb": "3.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "shelljs": "^0.8.3",
-    "web3": "^1.0.0-beta.54"
+    "web3": "1.2.1"
   }
 }
