Small correction in the parity chain generation script

--- a/parity-authority/docker-compose.yml
+++ b/parity-authority/docker-compose.yml
@@ -97,6 +97,7 @@ volumes:
   data-volume:
 networks:
   app_net:
+    name: dockerized_network
     driver: bridge
     ipam:
       driver: default
