--- a/mock-sensor/docker/decentralized-energy-trading/package.json
+++ b/mock-sensor/docker/decentralized-energy-trading/package.json
@@ -28,11 +28,10 @@
     "setup-zokrates": "./scripts/setup_zokrates.sh",
     "run-benchmark-node": "./benchmark/run-parity.sh",
     "generate-proving-files": "node zokrates-code/zoKratesCodeGenerator.js",
-    "generate-docker-parity": "node generateDockerChain.js",
     "docker-parity-setup": "./parity-authority/parity_setup.sh",
+    "generate-docker-parity": "node generateDockerChain.js",
     "setup-system": "./scripts/setup_script.sh",
     "generate-docker-files": "node setup_script.js"
-
   },
   "devDependencies": {
     "@gnosis.pm/mock-contract": "3.0.7",
@@ -69,6 +68,7 @@
     "js-sha256": "0.9.0",
     "keythereum": "^1.0.4",
     "mongodb": "3.3.2",
+    "ncp": "^2.0.0",
     "portscanner": "^2.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
